refactor: streamline enemy and game management logic, remove unused methods